# FastArray

./: .gitignore  CMakeLists.txt  README.markdown  _fast_array_8hpp_source.html  annotated.html  classes.html  create-version-header.sh  dir_ffcdbc269ac5374b738563710c2d2fc0.html  dir_ffcdbc269ac5374b738563710c2d2fc0_dep.map  dir_ffcdbc269ac5374b738563710c2d2fc0_dep.md5  dirs.html  files.html  graph_legend.html  index.html  main_8cpp_source.html  navtree.js  structfa_1_1_binary_op-members.html  structfa_1_1_binary_op.html  structfa_1_1_fast_array-members.html  structfa_1_1_fast_array.html  structfa_1_1divide-members.html  structfa_1_1divide.html  structfa_1_1minus-members.html  structfa_1_1minus.html  structfa_1_1mult-members.html  structfa_1_1mult.html  structfa_1_1plus-members.html  structfa_1_1plus.html  structfa_1_1promote.html  structfa_1_1promote_3_01_t_00_01_t_01_4-members.html  structfa_1_1promote_3_01_t_00_01_t_01_4.html  structfa_1_1term-members.html  structfa_1_1term.html  structfa_1_1term_3_01_fast_array_01_4-members.html  structfa_1_1term_3_01_fast_array_01_4.html  structfa_1_1term_3_01_fast_array_01_4__coll__graph.map  structfa_1_1term_3_01_fast_array_01_4__coll__graph.md5  structfa_1_1term_3_01_scalar_t_01_4-members.html  structfa_1_1term_3_01_scalar_t_01_4.html  unit-tests_8cpp_source.html
doc/: do-cmake  doxygen.config  google.cfg
gtest-1.5.0/: config.status  libtool
gtest-1.5.0/lib/: libgtest.la  libgtest_main.la
gtest-1.5.0/lib/.libs/: libgtest.lai  libgtest_main.lai
gtest-1.5.0/lib/.libs/libgtest.0.0.0.dylib.dSYM/Contents/: Info.plist
gtest-1.5.0/lib/.libs/libgtest_main.0.0.0.dylib.dSYM/Contents/: Info.plist
gtest-1.5.0/scripts/: gtest-config
gtest-1.5.0/src/.deps/: gtest-all.Plo  gtest_main.Plo
search/: all_64.html  all_66.html  all_70.html  all_74.html  classes_62.html  classes_6d.html  search.js
src/: CMakeLists.txt  FastArray.hpp  fa_version.cpp  fa_version.hpp  unit-tests.cpp
